[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/PixelSpaceRage/256px/Powerup_Energy_png_processed.png" type="Texture" id=1]
[ext_resource path="res://src/PowerUps/PlasmaPowerup.gd" type="Script" id=2]
[ext_resource path="res://assets/sound_assets/plasma_powerup_pickup.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.0135, 13.4623 )

[node name="PlasmaPowerup" type="StaticBody2D" groups=[
"plasma_powerup",
]]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"plasma_powerup",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 12.291
bus = "SFX"
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="finished" from="PickupSound" to="." method="_on_PickupSound_finished"]
